# EDAcraft

./: .gitignore  LICENSE  README.md  a-star_test.js  fsm-prev.cpp  fsm-prev.h  j_progressed.js  j_regressed.js  modelo.md  new.js  old.js  package-lock.json  package.json
code/: CMakeLists.txt  README.md  bot_io.cpp  bot_io.h  fsm-prev.cpp  fsm-prev.h  fsm.cpp  fsm.h  jason_helpers.cpp  json_helpers.cpp  json_helpers.h  main.cpp  pathfinder.cpp  pathfinder.h
minebot/: package.json
minebot/src/: actions.js  behaviors.js  bot.js  pathfinder.js
